fix double footer issues, fix align issues in cart page, add address form

--- a/frontend/src/Components/CartItems/CartItems.css
+++ b/frontend/src/Components/CartItems/CartItems.css
@@ -49,16 +49,24 @@
 .cartitems-down{
     display: flex;
     margin: 100px 0px;
+    justify-content: center;
+    
 }
 .cartitems-total{
-    flex: 1;
+    /* flex: 1; */
     display: flex;
     flex-direction: column;
-    margin-right: 200px;
+    /* margin-right: 200px; */
+    align-items: center;
     gap: 40px;
+    min-width: 600px; /* Set a minimum width */
+    max-width: 800px; /* Adjust the maximum width */
+    margin: 0 auto; /* Center the container */
 }
 .cartitems-total-item{
     display: flex;
+    flex-direction: row;
+    gap: 300px;
     justify-content: space-between;
     padding: 15px 0px;
 }
@@ -69,7 +77,7 @@
 }
 .proceed-button{
     background-color: #24831a;
-    width: 600px;
+    width: 300px;
     color: white;
     border: none;
     padding: 15px 30px;
@@ -96,6 +104,7 @@
     flex-direction: row;
     gap: 20px;
 }
+
 @media(max-width:1280px) {
     .cartitems-format-main{
         transform: scale(0.8);
